--- a/Project-Aurora/Aurora-Updater/Aurora-Updater.csproj
+++ b/Project-Aurora/Aurora-Updater/Aurora-Updater.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
   <PropertyGroup>
-    <TargetFramework>net48</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <Platforms>AnyCPU;x64</Platforms>
     <OutputType>WinExe</OutputType>
     <PlatformTarget>x64</PlatformTarget>
@@ -9,7 +9,6 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Aurora_Updater</RootNamespace>
     <AssemblyName>Aurora-Updater</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <InformationalVersion>1.0.0</InformationalVersion>
     <Title>Aurora-Updater</Title>
